<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HSA</string>
    <string name="completeInformation">Complete Information</string>
    <string name="title_activity_filter">Filter</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter name</string>
    <string name="new_deck">New Deck</string>
    <string name="modify_deck">Deck</string>
    <string name="import_deck">Import Deck</string>
    <string name="filter_title">Filter</string>
    <string name="druid">Druid</string>
    <string name="hunter">Hunter</string>
    <string name="mage">Mage</string>
    <string name="paladin">Paladin</string>
    <string name="priest">Priest</string>
    <string name="rogue">Rogue</string>
    <string name="shaman">Shaman</string>
    <string name="warlock">Warlock</string>
    <string name="warrior">Warrior</string>
    <string name="enter_a_name">Enter a name...</string>
    <string name="confirm">Confirm</string>
    <string name="create">Create</string>
	<string name="accept_filter">OK</string>
	<string name="cancel_filter">Reset</string>
	<string name="all_card_title">All</string>
	<string name="track_title">Track</string>
	<string name="save_title">Save</string>
	<string name="delete_title">Delete Deck</string>
	<string name="modify_name_title">Modify Name</string>
	<string name="track_deck">Tracking</string>
	
	
	
</resources>
