<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
      xmlns:hsa="http://schemas.android.com/apk/res-auto">
    
    <item android:id="@+id/searchDeck"
          android:title="@string/search_title"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"
          hsa:actionViewClass="android.support.v7.widget.SearchView"
          hsa:showAsAction="always" />
    
    <item android:id="@+id/all_cardDeck"
          android:title="@string/all_card_title"
          android:icon="@drawable/ic_all"
          hsa:showAsAction="never" />
    
    <item android:id="@+id/filterDeck"
          android:title="@string/filter_title"
          android:icon="@drawable/filter"
          hsa:showAsAction="never" />
    
    <item android:id="@+id/track"
          android:title="@string/track_title"
          android:icon="@drawable/track_w"
          hsa:showAsAction="always|withText" />
    
    <item android:id="@+id/save"
          android:title="@string/save_title"
          android:icon="@drawable/ic_action_save"
          hsa:showAsAction="always" />

    <item android:id="@+id/delete"
          android:title="@string/delete_title"
          hsa:showAsAction="never" />


</menu>
